--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     "paths": {
       "@project/anchor": ["anchor/src"],
       "@/*": ["./src/*"]
-    }
+    },
+    "downlevelIteration": true 
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.spec.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
