feat: pages, apis for owner and driver for booking, parking, dashboard etc

--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ GITHUB_SECRET=668acf45e4d9a53f4c095e300a42ae2c9044b7d8
 
 GOOGLE_ID=103541741629-lgsi3gd9if2ob1fecfirlc6kb1uvlsq2.apps.googleusercontent.com
 GOOGLE_SECRET=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
+GOOGLE_MAPS_API_KEY=AIzaSyDklIht6GrUVe6cWrp5VTTC3tSqny_NQkQ
 
 NEXTAUTH_SECRET='secret123'
 NEXTAUTH_URL='http://localhost:3000'
