--- a/anchor/programs/dparkr/Cargo.toml
+++ b/anchor/programs/dparkr/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "dparkr"
 version = "0.1.0"
-description = "Created with Anchor"
+description = "Decentralised Parking With DePIN"
 edition = "2021"
 
 [lib]
@@ -17,4 +17,4 @@ no-log-ix-name = []
 idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
-anchor-lang = "0.30.1"
+anchor-lang = "0.31.1"
